--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 
 
-token: "lip_tepfCKApStvrIsVxRKmy"        # Lichess OAuth2 Token.
+token:         # Lichess OAuth2 Token.
 
 engines:
   standard:                               # Engine used for standard chess and when no suitable special engine is configured.
